...
        view.axis = .vertical
        view.alignment = .center
        view.spacing = 32
        return view
    }()
    
    private lazy var expensesFormContainer: CustomFormContainer = {
        let view = CustomFormContainer(
            title: S.Expenses.ExpensesContainer.Title.text,
            description: S.Expenses.ExpensesContainer.Description.text,
            colorType: .red
        )
        view.accessibilityIdentifier = "expensesFormContainer"
...
        button.setTitle(S.Expenses.NextButton.title, for: .normal)
        button.backgroundColor = A.Colors.buttonBlue.color
        button.setBackgroundColor(A.Colors.background.color.withAlphaComponent(0.5), for: .highlighted)
        
        button.layer.cornerRadius = 10
        button.addTarget(self, action: #selector(nextBottomButtonPressed), for: .touchUpInside)
        button.accessibilityIdentifier = "goToResultButton"
        return button
    }()
    
    // MARK: - Init
    override init(frame: CGRect) {
        super.init(frame: frame)
...
