...
        label.font = UIFont.systemFont(ofSize: 24, weight: .bold)
        label.textColor = A.Colors.labelPrimary.color
        label.text = S.Consults.EmptyTitleLabel.text
        return label
    }()
    
    private lazy var newConsultButton: UIButton = {
        let button = UIButton()
        button.translatesAutoresizingMaskIntoConstraints = false
        button.setTitle(S.Consults.NewConsultButton.title, for: .normal)
        button.setTitleColor(.white, for: .normal)
        button.backgroundColor = A.Colors.buttonBlue.color
        button.setBackgroundColor(A.Colors.background.color.withAlphaComponent(0.5), for: .highlighted)
...
